submitting first assignment

--- a/lessons/lesson 2/numpy-and-pandas.ipynb
+++ b/lessons/lesson 2/numpy-and-pandas.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -138,13 +138,26 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0.]\n",
+      "[[ 1.  1.  1.]\n",
+      " [ 1.  1.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating arrays\n",
     "a = np.zeros((3))\n",
     "b = np.ones((2,3))\n",
     "c = np.random.randint(1,10,(2,3,4))\n",
-    "d = np.arange(0,11,1)"
+    "d = np.arange(0,11,1)\n",
+    "\n",
+    "print a\n",
+    "print b"
    ]
   },
   {
@@ -1642,7 +1655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
