--- a/review and prework/Web Scraping Tutorial.ipynb
+++ b/review and prework/Web Scraping Tutorial.ipynb
@@ -494,9 +494,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [dsi]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [dsi]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -508,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
