web scraping progress

--- a/Practice-Content/capstone/Lesson 7 Prework.ipynb
+++ b/Practice-Content/capstone/Lesson 7 Prework.ipynb
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1956,6 +1956,29 @@
     "\n",
     "page_html = requests.get(\"http://www.basketball-reference.com/players/a/\").text\n",
     "elements = Selector(text=page_html).xpath(\"//table[@id='players']/tbody/tr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'<tr><th scope=\"row\" class=\"left \" data-append-csv=\"abdelal01\" data-stat=\"player\"><a href=\"/players/a/abdelal01.html\">Alaa Abdelnaby</a></th><td class=\"right \" data-stat=\"year_min\">1991</td><td class=\"right \" data-stat=\"year_max\">1995</td><td class=\"center \" data-stat=\"pos\">F-C</td><td class=\"right \" data-stat=\"height\" csk=\"82.0\">6-10</td><td class=\"right \" data-stat=\"weight\">240</td><td class=\"left \" data-stat=\"birth_date\" csk=\"19680624\"><a href=\"/friv/birthdays.cgi?month=6&amp;day=24\">June 24, 1968</a></td><td class=\"left \" data-stat=\"college_name\"><a href=\"/friv/colleges.fcgi?college=duke\">Duke University</a></td></tr>'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elements[0].extract()"
    ]
   },
   {
@@ -2004,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2024,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -2185,7 +2208,7 @@
        " {'player': [u'Kelenna Azubuike'], 'year': [u'2007']}]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2805,46 +2828,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://www.basketball-reference.com/players/A/\n",
-      "http://www.basketball-reference.com/players/B/\n",
-      "http://www.basketball-reference.com/players/C/\n",
-      "http://www.basketball-reference.com/players/D/\n",
-      "http://www.basketball-reference.com/players/E/\n",
-      "http://www.basketball-reference.com/players/F/\n",
-      "http://www.basketball-reference.com/players/G/\n",
-      "http://www.basketball-reference.com/players/H/\n",
-      "http://www.basketball-reference.com/players/I/\n",
-      "http://www.basketball-reference.com/players/J/\n",
-      "http://www.basketball-reference.com/players/K/\n",
-      "http://www.basketball-reference.com/players/L/\n",
-      "http://www.basketball-reference.com/players/M/\n",
-      "http://www.basketball-reference.com/players/N/\n",
-      "http://www.basketball-reference.com/players/O/\n",
-      "http://www.basketball-reference.com/players/P/\n",
-      "http://www.basketball-reference.com/players/Q/\n",
-      "http://www.basketball-reference.com/players/R/\n",
-      "http://www.basketball-reference.com/players/S/\n",
-      "http://www.basketball-reference.com/players/T/\n",
-      "http://www.basketball-reference.com/players/U/\n",
-      "http://www.basketball-reference.com/players/V/\n",
-      "http://www.basketball-reference.com/players/W/\n",
-      "http://www.basketball-reference.com/players/X/\n",
-      "http://www.basketball-reference.com/players/Y/\n",
-      "http://www.basketball-reference.com/players/Z/\n"
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fbb6a2d13f25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mletter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpage_letters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"http://www.basketball-reference.com/players/%s/\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mletter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mpage_html\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;31m# parse single process here to fetch page content...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
      ]
     }
    ],
    "source": [
-    "page_letters = list(\"ABCDEFGHIJKLMNOPQRSTUVWXYZ\")\n",
+    "page_letters = list(\"abcdefghijklmnopqrstubwxyz\")\n",
     "\n",
     "for letter in page_letters:\n",
     "    url = \"http://www.basketball-reference.com/players/%s/\" % letter\n",
