--- a/review and prework/Lesson 9 Prework - Logistic Regression.ipynb
+++ b/review and prework/Lesson 9 Prework - Logistic Regression.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1477,9 +1477,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:dsi]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-dsi-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1491,7 +1491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
