--- a/Practice-Content/capstone/Carter Capstone Review.ipynb
+++ b/Practice-Content/capstone/Carter Capstone Review.ipynb
@@ -21,9 +21,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [dsi]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [dsi]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -35,7 +35,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
