almost done with capstone

--- a/Practice-Content/capstone/BasketballReferenceData.ipynb
+++ b/Practice-Content/capstone/BasketballReferenceData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -55,45 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed a\n",
-      "Completed b\n",
-      "Completed c\n",
-      "Completed d\n",
-      "Completed e\n",
-      "Completed f\n",
-      "Completed g\n",
-      "Completed h\n",
-      "Completed i\n",
-      "Completed j\n",
-      "Completed k\n",
-      "Completed l\n",
-      "Completed m\n",
-      "Completed n\n",
-      "Completed o\n",
-      "Completed p\n",
-      "Completed q\n",
-      "Completed r\n",
-      "Completed s\n",
-      "Completed t\n",
-      "Completed u\n",
-      "Completed v\n",
-      "Completed w\n",
-      "Completed x\n",
-      "Completed y\n",
-      "Completed z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "browser = webdriver.Chrome(executable_path = chromedriver, chrome_options = chop)\n",
     "\n",
@@ -131,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -155,19 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4458"
+       "4460"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4916,6 +4883,212 @@
     "\n",
     "X = set(col['Name']) & set(results['Name'])\n",
     "len(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20:07:22.999892\n",
+      "21:59:38.157064\n"
+     ]
+    }
+   ],
+   "source": [
+    "browser = webdriver.Chrome(executable_path = chromedriver, chrome_options = chop)\n",
+    "\n",
+    "player_position = []\n",
+    "\n",
+    "print datetime.datetime.now().time()\n",
+    "\n",
+    "for l in player_links:\n",
+    "    \n",
+    "    player_url = \"http://www.basketball-reference.com%s\" % l\n",
+    "    \n",
+    "    # get the html of the player page\n",
+    "    browser.get(player_url)\n",
+    "    \n",
+    "    # pull the page source so I can access the data via xpath selector\n",
+    "    player_html = browser.page_source\n",
+    "    \n",
+    "    # grab the name of the player\n",
+    "    name = Selector(text=player_html).xpath(\"//h1/text()\").extract()\n",
+    "    \n",
+    "    # grab their pro stats, which will be a list\n",
+    "    #pro_stats = Selector(text=player_html).xpath(\"//table[@id='per_game']/tfoot/tr[1]/td/text()\").extract()\n",
+    "    #print len(pro_stats)\n",
+    "    # col_points = Selector(text=player_html).xpath(\"//table[@id='all_college_stats']/tfoot/tr//td/text()\").extract    \n",
+    "    \n",
+    "    player_position.append({\n",
+    "        \"Name\": name[0],\n",
+    "        \"Position\": Selector(text=player_html).xpath(\"//table[@id='per_game']/tbody/tr[@data-row=0]//td[@data-stat='pos']/text()\").extract()\n",
+    "    })\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#     chance = (random.randint(1,100))    \n",
+    "#     if chance <= 5:\n",
+    "#         print (\"5% chance of getting this-- still running\")\n",
+    "\n",
+    "print datetime.datetime.now().time()\n",
+    "browser.quit()\n",
+    "\n",
+    "for index, row in enumerate(player_position):\n",
+    "    \n",
+    "    for key, value in row.items():       \n",
+    "        if len(value) < 1:\n",
+    "            player_position[index][key] = \"\"\n",
+    "        elif type(value) == list:\n",
+    "            player_position[index][key] = value[0]\n",
+    "        else:\n",
+    "            player_position[index][key] = value\n",
+    "            \n",
+    "\n",
+    "player_pos = pd.DataFrame(player_position)    \n",
+    "\n",
+    "player_pos.to_csv(path_or_buf= 'player_positions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Name': u'Alaa Abdelnaby', 'Position': [u'PF']},\n",
+       " {'Name': u'Zaid Abdul-Aziz', 'Position': [u'C']},\n",
+       " {'Name': u'Kareem Abdul-Jabbar', 'Position': [u'C']},\n",
+       " {'Name': u'Mahmoud Abdul-Rauf', 'Position': [u'PG']},\n",
+       " {'Name': u'Tariq Abdul-Wahad', 'Position': [u'SG']}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Name': u'Alaa Abdelnaby', 'Position': u'PF'},\n",
+       " {'Name': u'Zaid Abdul-Aziz', 'Position': u'C'},\n",
+       " {'Name': u'Kareem Abdul-Jabbar', 'Position': u'C'},\n",
+       " {'Name': u'Mahmoud Abdul-Rauf', 'Position': u'PG'},\n",
+       " {'Name': u'Tariq Abdul-Wahad', 'Position': u'SG'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "player_pos = pd.DataFrame(player_position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alaa Abdelnaby</td>\n",
+       "      <td>PF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Zaid Abdul-Aziz</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kareem Abdul-Jabbar</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mahmoud Abdul-Rauf</td>\n",
+       "      <td>PG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tariq Abdul-Wahad</td>\n",
+       "      <td>SG</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name Position\n",
+       "0       Alaa Abdelnaby       PF\n",
+       "1      Zaid Abdul-Aziz        C\n",
+       "2  Kareem Abdul-Jabbar        C\n",
+       "3   Mahmoud Abdul-Rauf       PG\n",
+       "4    Tariq Abdul-Wahad       SG"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_pos.head()"
    ]
   },
   {
